--- a/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.scss
+++ b/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.scss
@@ -9,3 +9,13 @@
 .search-models {
   padding: 0em 1em 0em 1em;
 }
+
+.mat-column-total {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 20px;
+}
+
+.footer {
+  font-weight: bold;
+}
