--- a/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
+++ b/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
@@ -169,6 +169,14 @@
         </mat-cell>
       </ng-container>
 
+      <ng-container matColumnDef="has_serial_no">
+        <mat-header-cell *matHeaderCellDef>Has Serial</mat-header-cell>
+        <mat-cell *matCellDef="let row">
+          <mat-checkbox class="example-margin" [(ngModel)]="row.has_serial_no" [disabled]="true">
+          </mat-checkbox>
+        </mat-cell>
+      </ng-container>
+
       <ng-container matColumnDef="add_serial">
         <mat-header-cell *matHeaderCellDef>Add Serials</mat-header-cell>
         <mat-cell *matCellDef="let row">
@@ -227,6 +235,7 @@
           <input
             oninput="this.value = this.value.toUpperCase()"
             *ngIf="row.serial_no.length === 1 ? true : false"
+            disabled="row.has_serial_no"
             [(ngModel)]="row.serial_no[0]"
           />
           <p *ngIf="row.serial_no.length === 1 ? false : true">
