feat(rma-frontend): Fixed datePicker date format display and added sr. no. column in SI and PI listing

--- a/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.html
+++ b/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.html
@@ -123,6 +123,14 @@
         (matSortChange)="setFilter($event)"
         style="width: 100%;"
       >
+        <ng-container matColumnDef="sr_no">
+          <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+          <mat-cell *matCellDef="let row;let i=index ">
+            {{i+1}}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
+
         <ng-container matColumnDef="purchase_invoice_number">
           <mat-header-cell *matHeaderCellDef mat-sort-header="name">
             Invoice No.
