--- a/packages/rma-frontend/src/app/warranty-ui/warranty/warranty.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/warranty/warranty.page.html
@@ -151,6 +151,14 @@
               [dataSource]="dataSource"
               (matSortChange)="setFilter($event)"
             >
+              <ng-container matColumnDef="sr_no">
+                <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+                <mat-cell *matCellDef="let row;let i=index ">
+                  {{i+1}}
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+              </ng-container>
+
               <ng-container matColumnDef="claim_no">
                 <mat-header-cell *matHeaderCellDef mat-sort-header="claim_no">
                   Claim no
