--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -185,6 +185,13 @@
         (matSortChange)="setFilter($event)"
         style="width: 100%;"
       >
+        <ng-container matColumnDef="sr_no">
+          <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+          <mat-cell *matCellDef="let row;let i=index ">
+            {{i+1}}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
         <!-- customer Column -->
         <ng-container matColumnDef="customer">
           <mat-header-cell *matHeaderCellDef mat-sort-header="customer">
