--- a/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.scss
+++ b/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.scss
@@ -23,3 +23,10 @@
 .mat-column-sr_no {
   flex: 0 0 5%;
 }
+.date-filter-text {
+  font-size: 0.7rem;
+}
+.full-width {
+  width: 100%;
+  color: black;
+}
